--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ https://templatemo.com/tm-571-hexashop
                 <div class="col-lg-6">
                     <div class="section-heading">
                         <h2>Addidas/Timberlands</h2>
-                        <span>Details to details is what makes Hexashop different from the other themes.</span>
+                        <span>Swipe <>.</span>
                     </div>
                 </div>
             </div>
@@ -579,7 +579,7 @@ https://templatemo.com/tm-571-hexashop
                 <div class="col-lg-6">
                     <div class="section-heading">
                         <h2>Nike/Jordans</h2>
-                        <span>Details to details is what makes Hexashop different from the other themes.</span>
+                        <span>Swipe <>.</span>
                     </div>
                 </div>
             </div>
@@ -880,7 +880,7 @@ https://templatemo.com/tm-571-hexashop
                 <div class="col-lg-6">
                     <div class="section-heading">
                         <h2>Rubbers/Canvas/Sneakers</h2>
-                        <span>Details to details is what makes Hexashop different from the other themes.</span>
+                        <span>Swipe <>.</span>
                     </div>
                 </div>
             </div>
@@ -997,10 +997,10 @@ https://templatemo.com/tm-571-hexashop
                 <div class="col-lg-6">
                     <div class="left-content">
                         <h2>Explore Our Products</h2>
-                        <span>You are allowed to use this HexaShop HTML CSS template. You can feel free to modify or edit this layout. You can convert this template as any kind of ecommerce CMS theme as you wish.</span>
+                        <span>Blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah.</span>
                         
-                        <p>There are 5 pages included in this HexaShop Template and we are providing it to you for absolutely free of charge at our TemplateMo website. There are web development costs for us.</p>
-                        <p>If this template is beneficial for your website or business, please kindly <a rel="nofollow" href="https://rrankyy.github.io" target="https://blank">support us</a> a little via PayPal. Please also tell your friends about our great website. Thank you.</p>
+                        <p>Blah blah blah blah blah blah blah blahblah blah blah blah blah  blah blah blah blah blah blah blah blah blah blah blah blah blah blah.</p>
+                        <p>Blah blah blah blah blah blah blah <a rel="nofollow" href="https://rrankyy.github.io" target="https://blank">click</a> Blah blah blah blah blah. Thank you.</p>
                         <div class="main-border-button">
                 
                         </div>
@@ -1011,7 +1011,7 @@ https://templatemo.com/tm-571-hexashop
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="leather">
-                                    <h4>Leather Bags</h4>
+                                    <h4>Apparels</h4>
                                     <span>Latest Collection</span>
                                 </div>
                             </div>
@@ -1027,8 +1027,8 @@ https://templatemo.com/tm-571-hexashop
                             </div>
                             <div class="col-lg-6">
                                 <div class="types">
-                                    <h4>Different Types</h4>
-                                    <span>Over 304 Products</span>
+                                    <h4>In stock</h4>
+                                    <span>Over 1000 Products</span>
                                 </div>
                             </div>
                         </div>
@@ -1046,7 +1046,7 @@ https://templatemo.com/tm-571-hexashop
                 <div class="col-lg-12">
                     <div class="section-heading">
                         <h2>Social Media</h2>
-                        <span>Details to details is what makes Hexashop different from the other themes.</span>
+                        <span>Details to details is what makes Jaynick different from the other.</span>
                     </div>
                 </div>
             </div>
@@ -1057,7 +1057,7 @@ https://templatemo.com/tm-571-hexashop
                     <div class="thumb">
                         <div class="icon">
                             <a href="http://instagram.com">
-                                <h6>Fashion</h6>
+                                <h6>IG</h6>
                                 <i class="fa fa-instagram"></i>
                             </a>
                         </div>
@@ -1068,7 +1068,7 @@ https://templatemo.com/tm-571-hexashop
                     <div class="thumb">
                         <div class="icon">
                             <a href="http://instagram.com">
-                                <h6>New</h6>
+                                <h6>IG</h6>
                                 <i class="fa fa-instagram"></i>
                             </a>
                         </div>
@@ -1079,7 +1079,7 @@ https://templatemo.com/tm-571-hexashop
                     <div class="thumb">
                         <div class="icon">
                             <a href="http://instagram.com">
-                                <h6>Brand</h6>
+                                <h6>IG</h6>
                                 <i class="fa fa-instagram"></i>
                             </a>
                         </div>
@@ -1090,7 +1090,7 @@ https://templatemo.com/tm-571-hexashop
                     <div class="thumb">
                         <div class="icon">
                             <a href="http://instagram.com">
-                                <h6>Makeup</h6>
+                                <h6>IG</h6>
                                 <i class="fa fa-instagram"></i>
                             </a>
                         </div>
@@ -1101,7 +1101,7 @@ https://templatemo.com/tm-571-hexashop
                     <div class="thumb">
                         <div class="icon">
                             <a href="http://instagram.com">
-                                <h6>Leather</h6>
+                                <h6>IG</h6>
                                 <i class="fa fa-instagram"></i>
                             </a>
                         </div>
@@ -1112,7 +1112,7 @@ https://templatemo.com/tm-571-hexashop
                     <div class="thumb">
                         <div class="icon">
                             <a href="http://instagram.com">
-                                <h6>Bag</h6>
+                                <h6>IG</h6>
                                 <i class="fa fa-instagram"></i>
                             </a>
                         </div>
@@ -1131,7 +1131,7 @@ https://templatemo.com/tm-571-hexashop
                 <div class="col-lg-8">
                     <div class="section-heading">
                         <h2>By Subscribing To Our Newsletter You Can Get 30% Off</h2>
-                        <span>Details to details is what makes Hexashop different from the other themes.</span>
+                        <span>Details to details is what makes Hexashop Jaynick from the other.</span>
                     </div>
                     <form id="subscribe" action="" method="get">
                         <div class="row">
